references and projects
project points onto a 400m track

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -248,10 +248,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(26.770151572389626, 67.00646881567646), None, None, None]\n",
+      "(26.770151572389626, 67.00646881567646)\n",
+      "[None, None, (26.770151572389626, -67.00646881567646), None]\n",
+      "(26.770151572389626, -67.00646881567646)\n",
+      "[(-24.066497554362027, 69.63682383636129), None, None, None]\n",
+      "(-24.066497554362027, 69.63682383636129)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# visualisation here https://www.desmos.com/calculator/enbx7xeuzp \n",
+    "print(closest_point_on_track(30, 70))\n",
+    "print(closest_point_on_track(30, -70))\n",
+    "print(closest_point_on_track(-20, 65))"
+   ]
   }
  ],
  "metadata": {
