wip: keypoint detection

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -56,6 +56,46 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "0.3348798998725978"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "haversine(-43.524427, 172.571987, -43.522602, 172.575291)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "306.95559486100126"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((12752103.039307 - 12752347.172427)**2 + (-4436705.995843+4436519.929304)**2)**0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -104,10 +144,10 @@
        "      <td>1.741</td>\n",
        "      <td>1237.247</td>\n",
        "      <td>2153.65</td>\n",
-       "      <td>7970064.399567</td>\n",
-       "      <td>-2772941.247402</td>\n",
-       "      <td>7970257.257671</td>\n",
-       "      <td>-2772777.444852</td>\n",
+       "      <td>12752103.039307</td>\n",
+       "      <td>-4436705.995843</td>\n",
+       "      <td>12752411.612274</td>\n",
+       "      <td>-4436443.911763</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -121,10 +161,10 @@
        "      <td>6.655</td>\n",
        "      <td>29.740</td>\n",
        "      <td>197.93</td>\n",
-       "      <td>7970256.951854</td>\n",
-       "      <td>-2772776.467612</td>\n",
-       "      <td>7970216.169836</td>\n",
-       "      <td>-2772824.256261</td>\n",
+       "      <td>12752411.122967</td>\n",
+       "      <td>-4436442.348179</td>\n",
+       "      <td>12752345.871738</td>\n",
+       "      <td>-4436518.810017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -138,10 +178,10 @@
        "      <td>1.561</td>\n",
        "      <td>106.812</td>\n",
        "      <td>166.72</td>\n",
-       "      <td>7970216.402102</td>\n",
-       "      <td>-2772828.186582</td>\n",
-       "      <td>7970256.750557</td>\n",
-       "      <td>-2772775.719996</td>\n",
+       "      <td>12752346.243364</td>\n",
+       "      <td>-4436525.098531</td>\n",
+       "      <td>12752410.800891</td>\n",
+       "      <td>-4436441.151994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -155,10 +195,10 @@
        "      <td>6.658</td>\n",
        "      <td>29.235</td>\n",
        "      <td>194.65</td>\n",
-       "      <td>7970256.587971</td>\n",
-       "      <td>-2772774.374288</td>\n",
-       "      <td>7970218.802183</td>\n",
-       "      <td>-2772822.809091</td>\n",
+       "      <td>12752410.540754</td>\n",
+       "      <td>-4436438.998861</td>\n",
+       "      <td>12752350.083493</td>\n",
+       "      <td>-4436516.494545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -172,10 +212,10 @@
        "      <td>1.607</td>\n",
        "      <td>99.272</td>\n",
        "      <td>159.57</td>\n",
-       "      <td>7970219.228004</td>\n",
-       "      <td>-2772826.525808</td>\n",
-       "      <td>7970257.180249</td>\n",
-       "      <td>-2772775.725336</td>\n",
+       "      <td>12752350.764806</td>\n",
+       "      <td>-4436522.441292</td>\n",
+       "      <td>12752411.488398</td>\n",
+       "      <td>-4436441.160538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -189,10 +229,10 @@
        "      <td>6.652</td>\n",
        "      <td>29.936</td>\n",
        "      <td>199.14</td>\n",
-       "      <td>7970257.249929</td>\n",
-       "      <td>-2772774.598573</td>\n",
-       "      <td>7970216.661466</td>\n",
-       "      <td>-2772825.078638</td>\n",
+       "      <td>12752411.599886</td>\n",
+       "      <td>-4436439.357717</td>\n",
+       "      <td>12752346.658345</td>\n",
+       "      <td>-4436520.12582</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -206,10 +246,10 @@
        "      <td>1.485</td>\n",
        "      <td>100.999</td>\n",
        "      <td>150.03</td>\n",
-       "      <td>7970216.661466</td>\n",
-       "      <td>-2772825.078638</td>\n",
-       "      <td>7970256.665393</td>\n",
-       "      <td>-2772776.788018</td>\n",
+       "      <td>12752346.658345</td>\n",
+       "      <td>-4436520.12582</td>\n",
+       "      <td>12752410.664629</td>\n",
+       "      <td>-4436442.860829</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -223,10 +263,10 @@
        "      <td>6.953</td>\n",
        "      <td>28.494</td>\n",
        "      <td>198.12</td>\n",
-       "      <td>7970256.375061</td>\n",
-       "      <td>-2772775.244726</td>\n",
-       "      <td>7970216.518235</td>\n",
-       "      <td>-2772821.207057</td>\n",
+       "      <td>12752410.200097</td>\n",
+       "      <td>-4436440.391562</td>\n",
+       "      <td>12752346.429176</td>\n",
+       "      <td>-4436513.931292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -240,10 +280,10 @@
        "      <td>2.26</td>\n",
        "      <td>406.732</td>\n",
        "      <td>919.39</td>\n",
-       "      <td>7970216.982767</td>\n",
-       "      <td>-2772824.955815</td>\n",
-       "      <td>7969856.3745</td>\n",
-       "      <td>-2772869.711281</td>\n",
+       "      <td>12752347.172427</td>\n",
+       "      <td>-4436519.929304</td>\n",
+       "      <td>12751770.199201</td>\n",
+       "      <td>-4436591.53805</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -272,30 +312,30 @@
        "7   172.575281              NaN            NaN     6.953    28.494   \n",
        "8   172.567483              NaN            NaN      2.26   406.732   \n",
        "\n",
-       "   lap_distance         start_x         start_y           end_x  \\\n",
-       "0       2153.65  7970064.399567 -2772941.247402  7970257.257671   \n",
-       "1        197.93  7970256.951854 -2772776.467612  7970216.169836   \n",
-       "2        166.72  7970216.402102 -2772828.186582  7970256.750557   \n",
-       "3        194.65  7970256.587971 -2772774.374288  7970218.802183   \n",
-       "4        159.57  7970219.228004 -2772826.525808  7970257.180249   \n",
-       "5        199.14  7970257.249929 -2772774.598573  7970216.661466   \n",
-       "6        150.03  7970216.661466 -2772825.078638  7970256.665393   \n",
-       "7        198.12  7970256.375061 -2772775.244726  7970216.518235   \n",
-       "8        919.39  7970216.982767 -2772824.955815    7969856.3745   \n",
+       "   lap_distance          start_x         start_y            end_x  \\\n",
+       "0       2153.65  12752103.039307 -4436705.995843  12752411.612274   \n",
+       "1        197.93  12752411.122967 -4436442.348179  12752345.871738   \n",
+       "2        166.72  12752346.243364 -4436525.098531  12752410.800891   \n",
+       "3        194.65  12752410.540754 -4436438.998861  12752350.083493   \n",
+       "4        159.57  12752350.764806 -4436522.441292  12752411.488398   \n",
+       "5        199.14  12752411.599886 -4436439.357717  12752346.658345   \n",
+       "6        150.03  12752346.658345  -4436520.12582  12752410.664629   \n",
+       "7        198.12  12752410.200097 -4436440.391562  12752346.429176   \n",
+       "8        919.39  12752347.172427 -4436519.929304  12751770.199201   \n",
        "\n",
        "            end_y  \n",
-       "0 -2772777.444852  \n",
-       "1 -2772824.256261  \n",
-       "2 -2772775.719996  \n",
-       "3 -2772822.809091  \n",
-       "4 -2772775.725336  \n",
-       "5 -2772825.078638  \n",
-       "6 -2772776.788018  \n",
-       "7 -2772821.207057  \n",
-       "8 -2772869.711281  "
+       "0 -4436443.911763  \n",
+       "1 -4436518.810017  \n",
+       "2 -4436441.151994  \n",
+       "3 -4436516.494545  \n",
+       "4 -4436441.160538  \n",
+       "5  -4436520.12582  \n",
+       "6 -4436442.860829  \n",
+       "7 -4436513.931292  \n",
+       "8  -4436591.53805  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
