--- a/references/references.bib
+++ b/references/references.bib
@@ -264,4 +264,91 @@ https://www.sciencedirect.com/science/article/pii/S0968090X21002771},
   url    = {https://support.garmin.com/en-NZ/?faq=7iMJZdoCcM2562XlKlMC76},
 }
 
+'
+@Article{Nweke2018,
+  author     = {Nweke, Henry Friday and Teh, Ying Wah and Al-garadi, Mohammed Ali and Alo, Uzoma Rita},
+  journal    = {Expert Systems with Applications},
+  title      = {Deep learning algorithms for human activity recognition using mobile and wearable sensor networks: {State} of the art and research challenges},
+  year       = {2018},
+  issn       = {0957-4174},
+  month      = sep,
+  pages      = {233--261},
+  volume     = {105},
+  abstract   = {Human activity recognition systems are developed as part of a framework to enable continuous monitoring of human behaviours in the area of ambient assisted living, sports injury detection, elderly care, rehabilitation, and entertainment and surveillance in smart home environments. The extraction of relevant features is the most challenging part of the mobile and wearable sensor-based human activity recognition pipeline. Feature extraction influences the algorithm performance and reduces computation time and complexity. However, current human activity recognition relies on handcrafted features that are incapable of handling complex activities especially with the current influx of multimodal and high dimensional sensor data. With the emergence of deep learning and increased computation powers, deep learning and artificial intelligence methods are being adopted for automatic feature learning in diverse areas like health, image classification, and recently, for feature extraction and classification of simple and complex human activity recognition in mobile and wearable sensors. Furthermore, the fusion of mobile or wearable sensors and deep learning methods for feature learning provide diversity, offers higher generalisation, and tackles challenging issues in human activity recognition. The focus of this review is to provide in-depth summaries of deep learning methods for mobile and wearable sensor-based human activity recognition. The review presents the methods, uniqueness, advantages and their limitations. We not only categorise the studies into generative, discriminative and hybrid methods but also highlight their important advantages. Furthermore, the review presents classification and evaluation procedures and discusses publicly available datasets for mobile sensor human activity recognition. Finally, we outline and explain some challenges to open research problems that require further research and improvements.},
+  doi        = {10.1016/j.eswa.2018.03.056},
+  file       = {:nweke_deep_2018 - Deep Learning Algorithms for Human Activity Recognition Using Mobile and Wearable Sensor Networks_ State of the Art and Research Challenges.html:URL},
+  keywords   = {Deep learning, Mobile and wearable sensors, Human activity recognition, Feature representation, Review},
+  language   = {en},
+  shorttitle = {Deep learning algorithms for human activity recognition using mobile and wearable sensor networks},
+  url        = {https://www.sciencedirect.com/science/article/pii/S0957417418302136},
+  urldate    = {2023-04-05},
+}
+
+'
+@Article{Wang2016,
+  author   = {Wang, Zhelong and Wu, Donghui and Chen, Jianming and Ghoneim, Ahmed and Hossain, Mohammad Anwar},
+  journal  = {IEEE Sensors Journal},
+  title    = {A {Triaxial} {Accelerometer}-{Based} {Human} {Activity} {Recognition} via {EEMD}-{Based} {Features} and {Game}-{Theory}-{Based} {Feature} {Selection}},
+  year     = {2016},
+  issn     = {1558-1748},
+  month    = may,
+  number   = {9},
+  pages    = {3198--3207},
+  volume   = {16},
+  abstract = {In recent years, sensor-based human activity recognition has attracted lots of studies. This paper presents a single wearable triaxial accelerometer-based human activity recognition system, which can be used in the real life of activity monitoring. The sensor is attached around different parts of the body: waist and left ankle, respectively. In order to improve the accuracy and reduce the computational complexity, the ensemble empirical mode decomposition (EEMD)-based features and the feature selection (FS) method are introduced, respectively. Considering the feature interaction, a game theory-based FS method is proposed to evaluate the features. Relevant and distinguished features that are robust to the placement of sensors are selected. In the experiment, the data acquired from the two different parts of the body, waist and ankle, are utilized to evaluate the proposed FS method. To verify the effectiveness of the proposed method, k-nearst neighbor and support vector machine are used to recognize the human activities from waist and ankle. Experiment results demonstrate the effectiveness of the introduced EEMD-based features for human activity recognition. Compared with the representative FS methods, including Relief-F and minimum-redundancy maximum-relevance, the proposed FS approach selects fewer features and provides higher accuracy. The results also show that the triaxial accelerometer around the waist produces optimal results.},
+  doi      = {10.1109/JSEN.2016.2519679},
+  keywords = {Feature extraction, Sensors, Accelerometers, White noise, Biomedical monitoring, Empirical mode decomposition, Game theory, Human Activity Recognition, Game Theory, Feature Selection, Human activity recognition, game theory, feature selection, wearable triaxial accelerometer, EEMD},
+}
+
+'
+@Article{Zdravevski2017,
+  author   = {Zdravevski, Eftim and Lameski, Petre and Trajkovik, Vladimir and Kulakov, Andrea and Chorbev, Ivan and Goleva, Rossitza and Pombo, Nuno and Garcia, Nuno},
+  journal  = {IEEE Access},
+  title    = {Improving {Activity} {Recognition} {Accuracy} in {Ambient}-{Assisted} {Living} {Systems} by {Automated} {Feature} {Engineering}},
+  year     = {2017},
+  issn     = {2169-3536},
+  pages    = {5262--5280},
+  volume   = {5},
+  abstract = {Ambient-assisted living (AAL) is promising to become a supplement of the current care models, providing enhanced living experience to people within context-aware homes and smart environments. Activity recognition based on sensory data in AAL systems is an important task because 1) it can be used for estimation of levels of physical activity, 2) it can lead to detecting changes of daily patterns that may indicate an emerging medical condition, or 3) it can be used for detection of accidents and emergencies. To be accepted, AAL systems must be affordable while providing reliable performance. These two factors hugely depend on optimizing the number of utilized sensors and extracting robust features from them. This paper proposes a generic feature engineering method for selecting robust features from a variety of sensors, which can be used for generating reliable classification models. From the originally recorded time series and some newly generated time series [i.e., magnitudes, first derivatives, delta series, and fast Fourier transformation (FFT)-based series], a variety of time and frequency domain features are extracted. Then, using two-phase feature selection, the number of generated features is greatly reduced. Finally, different classification models are trained and evaluated on an independent test set. The proposed method was evaluated on five publicly available data sets, and on all of them, it yielded better accuracy than when using hand-tailored features. The benefits of the proposed systematic feature engineering method are quickly discovering good feature sets for any given task than manually finding ones suitable for a particular task, selecting a small feature set that outperforms manually determined features in both execution time and accuracy, and identification of relevant sensor types and body locations automatically. Ultimately, the proposed method could reduce the cost of AAL systems by facilitating execution of algorithms on devices with limited resources and by using as few sensors as possible.},
+  doi      = {10.1109/ACCESS.2017.2684913},
+  file     = {:Zdravevski2017 - Improving Activity Recognition Accuracy in Ambient Assisted Living Systems by Automated Feature Engineering.pdf:PDF},
+  keywords = {Feature extraction, Windows, Activity recognition, Sensor phenomena and characterization, Robustness, Ambient assisted living, Feature extraction, time series analysis, ambient intelligence, wearable sensors, sensor fusion, pattern recognition, data mining, data preprocessing, body sensor networks},
+}
+
+'
+@Article{Abidine2018,
+  author   = {Abidine, Bilal M’hamed and Fergani, Lamya and Fergani, Belkacem and Oussalah, Mourad},
+  journal  = {Pattern Analysis and Applications},
+  title    = {The joint use of sequence features combination and modified weighted {SVM} for improving daily activity recognition},
+  year     = {2018},
+  issn     = {1433-755X},
+  month    = feb,
+  number   = {1},
+  pages    = {119--138},
+  volume   = {21},
+  abstract = {Two serious problems affecting the implementation of human activity recognition algorithms have been acknowledged.The first one corresponds to non-informative sequence features. The second is the class imbalance in the training data due to the fact that people do not spend the same amount of time on the different activities. To address these issues, we propose a new scheme based on a combination of principal component analysis, linear discriminant analysis (LDA) and the modified weighted support vector machines. First we added the most significant principal components to the set of features extracted using LDA. This work shows that a suitable sequence feature set combined with the modified WSVM based on our criterion classifier achieves good improvement and efficiency over the traditional used methods.},
+  doi      = {10.1007/s10044-016-0570-y},
+  file     = {:Abidine2018 - The Joint Use of Sequence Features Combination and Modified Weighted SVM for Improving Daily Activity Recognition.html:URL},
+  keywords = {Activity recognition, PCA, LDA, SVM, Imbalanced data classification},
+  language = {en},
+  url      = {https://doi.org/10.1007/s10044-016-0570-y},
+  urldate  = {2023-04-06},
+}
+
+@InProceedings{Ploetz2011,
+  author    = {Thomas Pl{\"o}tz and Hammerla, {Nils Y.} and Patrick Olivier},
+  booktitle = {IJCAI 2011 - 22nd International Joint Conference on Artificial Intelligence},
+  title     = {Feature learning for activity recognition in ubiquitous computing},
+  year      = {2011},
+  month     = dec,
+  note      = {International Joint Conference on Artificial Intelligence 2011, IJCAI 2011 ; Conference date: 16-07-2011 Through 22-07-2011},
+  pages     = {1729--1734},
+  abstract  = {Feature extraction for activity recognition in context-aware ubiquitous computing applications is usually a heuristic process, informed by underlying domain knowledge. Relying on such explicit knowledge is problematic when aiming to generalize across different application domains. We investigate the potential of recent machine learning methods for discovering universal features for context-aware applications of activity recognition. We also describe an alternative data representation based on the empirical cumulative distribution function of the raw data, which effectively abstracts from absolute values. Experiments on accelerometer data from four publicly available activity recognition datasets demonstrate the significant potential of our approach to address both contemporary activity recognition tasks and next generation problems such as skill assessment and the detection of novel activities.},
+  day       = {1},
+  doi       = {10.5591/978-1-57735-516-8/IJCAI11-290},
+  isbn      = {9781577355120},
+  language  = {English},
+  url       = {https://www.ijcai.org/proceedings/2011},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
