feat: extra map generations
plus bug fixes for map coordinates

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -568,7 +568,7 @@
    ],
    "source": [
     "# visualisation here https://www.desmos.com/calculator/sikussppqz\n",
-    "from track import Track\n",
+    "from cosc428_track_location.track import Track\n",
     "\n",
     "track = Track()\n",
     "print(track.project(30, 70))\n",
