--- a/references/references.bib
+++ b/references/references.bib
@@ -351,4 +351,42 @@ https://www.sciencedirect.com/science/article/pii/S0968090X21002771},
   url       = {https://www.ijcai.org/proceedings/2011},
 }
 
+
+@Article{Prochazka2014,
+  author   = {Procházka,Ales and Vaseghi,Saeed and Yadollahi,Mohammadreza and Upa,Ondrej and Mares,Jan and Vysata,Oldrich},
+  journal  = {Medical and Biological Engineering and Computing},
+  title    = {Remote physiological and GPS data processing in evaluation of physical activities},
+  year     = {2014},
+  month    = {04},
+  note     = {Copyright - International Federation for Medical and Biological Engineering 2014; Last updated - 2022-11-13},
+  number   = {4},
+  pages    = {301-8},
+  volume   = {52},
+  abstract = {The monitoring of data from global positioning system (GPS) receivers and remote sensors of physiological and environmental data allow forming an information database for observed data processing. In this paper, we propose the use of such a database for the analysis of physical activities during cycling. The main idea of the proposed algorithm is to use cross-correlations between the heart rate and the altitude gradient to evaluate the delay between these variables and to study its time evolution. The data acquired during 22 identical cycling routes, each about 130 km long, include more than 6,700 segments of length 60 s recorded with varying sampling periods. General statistical and digital signal processing methods used include mathematical tools to reject gross errors, resampling using selected interpolation methods, digital filtering of noise signal components, and estimating cross-correlations between the position data and the physiological signals. The results of a regression between GPS and physiological data include the estimate of the time delay between the heart rate change and gradient altitude of about 7.5 s and its decrease during each training route.PUBLICATION ABSTRACT]},
+  isbn     = {01400118},
+  keywords = {Medical Sciences--Computer Applications; Global positioning systems--GPS; Data processing; Data acquisition systems; Computer science; Analysis; Studies; Physiology; Accuracy; Sensors; Signal processing; Altitude; Correlation analysis; Heart rate; Bicycling; 51821:Data Processing, Hosting, and Related Services; 2600:Management science/operations research; 9130:Experimental/theoretical; 5240:Software & systems; 51741:Satellite Telecommunications; Geography; Regression Analysis; Algorithms; Heart Rate -- physiology; Bicycling -- physiology; Humans; Geographic Information Systems; Telemetry -- methods; Signal Processing, Computer-Assisted},
+  language = {English},
+  url      = {https://www.proquest.com/scholarly-journals/remote-physiological-gps-data-processing/docview/1508631402/se-2},
+}
+
+'
+@Article{Charvatova2017,
+  author   = {Charvátová, Hana and Procházka, Aleš and Vaseghi, Saeed and Vyšata, Oldřich and Vališ, Martin},
+  journal  = {Signal, Image and Video Processing},
+  title    = {{GPS}-based analysis of physical activities using positioning and heart rate cycling data},
+  year     = {2017},
+  issn     = {1863-1711},
+  month    = feb,
+  number   = {2},
+  pages    = {251--258},
+  volume   = {11},
+  abstract = {This paper addresses the use of multichannel signal processing methods in analysis of heart rate changes during cycling using the global positioning system (GPS) to record the route conditions. The main objectives of this work are in monitoring of physiological activities, cycling features extraction, their classification and visualization. Real data were acquired from 41 cycling rides of the same 11.48-km long route divided into 2460 segments of approximately 60 s. The data were recorded with a varying sampling period within the range of 1–22 s depending on the route profile. The pre-processing stage included preparatory analysis, filtering and resampling of the data to a constant sampling rate. The proposed algorithm includes the evaluation of the cross-correlation between the heart rate and the altitude gradient as recorded by a GPS satellite system. A Bayesian approach was then applied to classify the cycling segment features into two classes (specifying cycling up and down) with the classification accuracy better than 93 \%. A comparison with other classification methods is presented in the paper as well. The results include the following relationships: (1) the heart rate and altitude gradient, which shared a positive correlation coefficient of 0.62; (2) the heart rate and speed, which shared a negative correlation coefficient of −0.72 over all of the analysed segments; and (3) the mean heart rate change delay (6.8–11.5 s) in relation to the changes in the altitude gradients associated with cycling up and down. The paper forms a contribution to the use of computational intelligence and visualization for data processing both in cycling and fitness physical activities as well.},
+  doi      = {10.1007/s11760-016-0928-z},
+  file     = {:Charvatova2017 - GPS Based Analysis of Physical Activities Using Positioning and Heart Rate Cycling Data.html:URL},
+  keywords = {Cycling data processing, GPS data acquisition, Data fusion, Biomedical signal analysis, Feature extraction, Bayesian classification},
+  language = {en},
+  url      = {https://doi.org/10.1007/s11760-016-0928-z},
+  urldate  = {2023-04-14},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
