--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -202,18 +202,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Timestamp        lat        long  speed cadence  \\\n",
-       "0    2021-04-05 23:18:05+00:00 -43.524414  172.572008  2.118   171.0   \n",
-       "1    2021-04-05 23:18:13+00:00 -43.524216  172.572205  3.256   172.0   \n",
-       "2    2021-04-05 23:18:19+00:00 -43.524073  172.572363  3.312   174.0   \n",
-       "3    2021-04-05 23:18:21+00:00 -43.524054  172.572424  3.303   174.0   \n",
-       "4    2021-04-05 23:18:27+00:00 -43.524051  172.572681  3.406   174.0   \n",
-       "..                         ...        ...         ...    ...     ...   \n",
-       "222  2021-04-05 23:48:13+00:00  -43.52329  172.568371  3.331   170.0   \n",
-       "223  2021-04-05 23:48:19+00:00 -43.523275  172.568104  3.359   170.0   \n",
-       "224  2021-04-05 23:48:25+00:00 -43.523293  172.567845  3.406   170.0   \n",
-       "225  2021-04-05 23:48:31+00:00 -43.523318    172.5676  3.424   169.0   \n",
-       "226  2021-04-05 23:48:35+00:00 -43.523304  172.567483  3.368   169.0   \n",
+       "                    Timestamp        lat        long  speed  cadence  \\\n",
+       "0   2021-04-05 23:18:05+00:00 -43.524414  172.572008  2.118    171.0   \n",
+       "1   2021-04-05 23:18:13+00:00 -43.524216  172.572205  3.256    172.0   \n",
+       "2   2021-04-05 23:18:19+00:00 -43.524073  172.572363  3.312    174.0   \n",
+       "3   2021-04-05 23:18:21+00:00 -43.524054  172.572424  3.303    174.0   \n",
+       "4   2021-04-05 23:18:27+00:00 -43.524051  172.572681  3.406    174.0   \n",
+       "..                        ...        ...         ...    ...      ...   \n",
+       "222 2021-04-05 23:48:13+00:00  -43.52329  172.568371  3.331    170.0   \n",
+       "223 2021-04-05 23:48:19+00:00 -43.523275  172.568104  3.359    170.0   \n",
+       "224 2021-04-05 23:48:25+00:00 -43.523293  172.567845  3.406    170.0   \n",
+       "225 2021-04-05 23:48:31+00:00 -43.523318    172.5676  3.424    169.0   \n",
+       "226 2021-04-05 23:48:35+00:00 -43.523304  172.567483  3.368    169.0   \n",
        "\n",
        "                 x             y  \n",
        "0    627037.534882  5.179747e+06  \n",
@@ -231,13 +231,22 @@
        "[227 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points.to_csv(\"running_points.csv\", index=False)"
    ]
   },
   {
@@ -1083,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
