feat: full inference run-through

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -25,6 +25,7 @@
    "outputs": [],
    "source": [
     "from tools import *\n",
+    "from dataloader import *\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime as dt\n",
@@ -52,188 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "      <th>speed</th>\n",
-       "      <th>cadence</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-04-05 23:18:05+00:00</td>\n",
-       "      <td>-43.524414</td>\n",
-       "      <td>172.572008</td>\n",
-       "      <td>2.118</td>\n",
-       "      <td>171.0</td>\n",
-       "      <td>627037.534882</td>\n",
-       "      <td>5.179747e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-04-05 23:18:13+00:00</td>\n",
-       "      <td>-43.524216</td>\n",
-       "      <td>172.572205</td>\n",
-       "      <td>3.256</td>\n",
-       "      <td>172.0</td>\n",
-       "      <td>627053.917153</td>\n",
-       "      <td>5.179769e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-04-05 23:18:19+00:00</td>\n",
-       "      <td>-43.524073</td>\n",
-       "      <td>172.572363</td>\n",
-       "      <td>3.312</td>\n",
-       "      <td>174.0</td>\n",
-       "      <td>627066.978349</td>\n",
-       "      <td>5.179784e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-04-05 23:18:21+00:00</td>\n",
-       "      <td>-43.524054</td>\n",
-       "      <td>172.572424</td>\n",
-       "      <td>3.303</td>\n",
-       "      <td>174.0</td>\n",
-       "      <td>627071.903041</td>\n",
-       "      <td>5.179786e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-04-05 23:18:27+00:00</td>\n",
-       "      <td>-43.524051</td>\n",
-       "      <td>172.572681</td>\n",
-       "      <td>3.406</td>\n",
-       "      <td>174.0</td>\n",
-       "      <td>627092.689446</td>\n",
-       "      <td>5.179786e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>222</th>\n",
-       "      <td>2021-04-05 23:48:13+00:00</td>\n",
-       "      <td>-43.52329</td>\n",
-       "      <td>172.568371</td>\n",
-       "      <td>3.331</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>626746.018943</td>\n",
-       "      <td>5.179877e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>2021-04-05 23:48:19+00:00</td>\n",
-       "      <td>-43.523275</td>\n",
-       "      <td>172.568104</td>\n",
-       "      <td>3.359</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>626724.469483</td>\n",
-       "      <td>5.179879e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>224</th>\n",
-       "      <td>2021-04-05 23:48:25+00:00</td>\n",
-       "      <td>-43.523293</td>\n",
-       "      <td>172.567845</td>\n",
-       "      <td>3.406</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>626703.446800</td>\n",
-       "      <td>5.179878e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>225</th>\n",
-       "      <td>2021-04-05 23:48:31+00:00</td>\n",
-       "      <td>-43.523318</td>\n",
-       "      <td>172.5676</td>\n",
-       "      <td>3.424</td>\n",
-       "      <td>169.0</td>\n",
-       "      <td>626683.594460</td>\n",
-       "      <td>5.179875e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>226</th>\n",
-       "      <td>2021-04-05 23:48:35+00:00</td>\n",
-       "      <td>-43.523304</td>\n",
-       "      <td>172.567483</td>\n",
-       "      <td>3.368</td>\n",
-       "      <td>169.0</td>\n",
-       "      <td>626674.193371</td>\n",
-       "      <td>5.179877e+06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>227 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Timestamp        lat        long  speed cadence  \\\n",
-       "0    2021-04-05 23:18:05+00:00 -43.524414  172.572008  2.118   171.0   \n",
-       "1    2021-04-05 23:18:13+00:00 -43.524216  172.572205  3.256   172.0   \n",
-       "2    2021-04-05 23:18:19+00:00 -43.524073  172.572363  3.312   174.0   \n",
-       "3    2021-04-05 23:18:21+00:00 -43.524054  172.572424  3.303   174.0   \n",
-       "4    2021-04-05 23:18:27+00:00 -43.524051  172.572681  3.406   174.0   \n",
-       "..                         ...        ...         ...    ...     ...   \n",
-       "222  2021-04-05 23:48:13+00:00  -43.52329  172.568371  3.331   170.0   \n",
-       "223  2021-04-05 23:48:19+00:00 -43.523275  172.568104  3.359   170.0   \n",
-       "224  2021-04-05 23:48:25+00:00 -43.523293  172.567845  3.406   170.0   \n",
-       "225  2021-04-05 23:48:31+00:00 -43.523318    172.5676  3.424   169.0   \n",
-       "226  2021-04-05 23:48:35+00:00 -43.523304  172.567483  3.368   169.0   \n",
-       "\n",
-       "                 x             y  \n",
-       "0    627037.534882  5.179747e+06  \n",
-       "1    627053.917153  5.179769e+06  \n",
-       "2    627066.978349  5.179784e+06  \n",
-       "3    627071.903041  5.179786e+06  \n",
-       "4    627092.689446  5.179786e+06  \n",
-       "..             ...           ...  \n",
-       "222  626746.018943  5.179877e+06  \n",
-       "223  626724.469483  5.179879e+06  \n",
-       "224  626703.446800  5.179878e+06  \n",
-       "225  626683.594460  5.179875e+06  \n",
-       "226  626674.193371  5.179877e+06  \n",
-       "\n",
-       "[227 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'points' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m points\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'points' is not defined"
+     ]
     }
    ],
    "source": [
